--- a/DemoDownloader/DemoDownloader.csproj
+++ b/DemoDownloader/DemoDownloader.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="11.1.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.0.1" />
   </ItemGroup>
 </Project>
