--- a/DemoDownloader/DemoDownloader.csproj
+++ b/DemoDownloader/DemoDownloader.csproj
@@ -8,5 +8,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="11.1.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.0.1" />
   </ItemGroup>
 </Project>
