--- a/DemoDownloader/DemoDownloader.csproj
+++ b/DemoDownloader/DemoDownloader.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.0.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RabbitMqLib\RabbitTransfer.csproj" />
+  </ItemGroup>
 </Project>
