--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "RabbitMqLib"]
 	path = RabbitMqLib
-	url = git@gitlab.com:mentorgg/engine/rabbitmqcluster.git
+	url = git@gitlab.com:mentorgg/engine/RabbitCommunicationLib.git 
+	branch = release-0.2.0
