Migrate to RabbitComLib to 0.4.0

--- a/DemoDownloader/DemoDownloader.csproj
+++ b/DemoDownloader/DemoDownloader.csproj
@@ -12,6 +12,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RabbitMqLib\RabbitTransfer.csproj" />
+    <ProjectReference Include="..\RabbitCommunicationLib\RabbitCommunicationLib.csproj" />
   </ItemGroup>
 </Project>
