--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "RabbitCommunicationLib"]
 	path = RabbitCommunicationLib
-	url = git@gitlab.com:mentorgg/engine/RabbitCommunicationLib.git
+	url = ../../engine/RabbitCommunicationLib.git
